--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -41,9 +41,9 @@
             </a>
             {{/if}}
 
-            <a href="/chat/discuss">
+            <a href="/tools/my-genetics">
             <img src="https://vacandlesupply.com/product-images/Blue%20Soap%20Dye.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
-            <h3 id="top-right-h3"><spanid="top-right-span">Discussion</span></h3>
+            <h3 id="top-right-h3"><spanid="top-right-span">My Genetics</span></h3>
             </a>
         </div>
     </div>
