password reset token emailed

--- a/views/users/password_new.handlebars
+++ b/views/users/password_new.handlebars
@@ -1,4 +1,9 @@
-
+{{#if error}}
+<div class="alert alert-danger" style="margin-top: 100px">{{error}}</div>
+{{/if}}
+{{#if success}}
+<div class="alert alert-success" style="margin-top: 100px">{{success}}</div>
+{{/if}}
 <h2 id="header-passreset-form">Forgot Your Password?</h2>
 
 <form class='reset-password-form' action="/users/password_new" method="post" autocomplete="on">
