--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -22,7 +22,7 @@
     <p class="lead about-p"> 
     Founded in 2016, CesarCells.com combines state-of-the-art research and <strong>ARMD Clinical Trials inclusion criteria</strong>. This has allowed us to advance the treating of patients in <strong> ARMD Clinical Trials </strong> at an accelerated pace. We are investigating many <strong>ARMD Clinical Trials </strong> that show the most promise for a cure.
 
-      CesarCells.com currently has eight clinical trials to qualify for. As single trials, three are stem cell, two are drug, and two are research.  Beyond these eight clinical trials, we have a pipeline of additional clinical trials that we will be adding periodically.
+      CesarCells.com currently has eight clinical trials to qualify for. As single trials, three are stem cell, two are drug, and three are research.  Beyond these eight clinical trials, we have a pipeline of additional clinical trials that we will be adding periodically.
     </p>
   
       <h2 style="text-align: left">Management Team</h2>
