--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -64,7 +64,7 @@
 
                                  <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
                                  
-                                 <a class="btn btn-primary btn-lg" href="/about_us/mission" role="button" id="learn-more">Learn More About Us</a>
+                                 <a class="btn btn-primary btn-lg" href="/about_us/aboutus" role="button" id="learn-more">Learn More About Us</a>
                              </header>
                                 
                            </div>
@@ -133,14 +133,7 @@
         
         
     {{!-- </div><br><br><br> --}}
-<div id="spopup" style="display: none;">
-    <!--close button-->
-    <a style="position:absolute;top:14px;right:10px;color:#555;font-size:10px;font-weight:bold;" href="javascript:void(0);" onclick="return closeSPopup();">
-        <img src="http://adventureahead.kindercare.com/images/shut.png" width="18" height="18"/>
-    </a>
-    <!--insert popup content here-->
-    Highlight Text To Have It Read To You.
-</div>
+
 
 
 <section id="cta" class="parallax-3">
