--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -7,7 +7,7 @@
 
       <div class="panel panel-default">
         <div class="panel-body">
-        <h2>SEE IF YOU QUALIFY FOR A STARGARDTS TRIAL</h2>
+        <h2>SEE IF YOU QUALIFY</h2>
         </div>
     </div>
       <img>
@@ -16,7 +16,7 @@
 
   <div class="row" id="start-panel-begin">
     <div class="col-md-6 col-md-offset-3">
-    <h2>Stargardts Disease Assessment</h2>
+    <h2>Retinal Disease Assessment</h2>
       <form method="get" action="/indexOne.html">
         <div class="form-group">
           <div class="panel panel-default">
