--- a/views/users/assessment_results.handlebars
+++ b/views/users/assessment_results.handlebars
@@ -74,7 +74,7 @@
     <h2 style="margin-top: 65px"> DID YOU QUALIFY? </h2>
       <p class="lead" style="line-height: 2.4; font-size: 24px; margin-left: 100px; width: 150">If the total points in the Your Points field, match the total points in the Qualifying Points field, then you've qualified for that trial. It's that simple! </p>
       <div class="col-sm-12">
-      <a href="/users/dashboard" type="submit" class="btn btn-primary" style="width: 200px; height: 60px; padding: 18px; margin-left: 150px"> Back To Dashboard</a><br>
+      <a href="/users/dashboard" type="submit" class="btn btn-primary" id="back-to-dash-btn" style="margin-left: 150px"> Back To Dashboard</a><br>
      
       </div>
     </div>
