--- a/views/users/star_disease_reg.handlebars
+++ b/views/users/star_disease_reg.handlebars
@@ -66,14 +66,9 @@
 
 <p>Please share this website with people you know who may have an interest in Stargardt disease.</p>
 
-<p>By submitting this form you agree to the terms:
+<p>By submitting this form you agree to our terms and conditions</p>
 
-There is no guarantee you will be enrolled in any clinical trial
-You authorize Alkeus Pharma and parties acting on its behalf to contact you</p>
-
-  
-    
-      <input type="submit" value="Submit" class="btn btn-default"><br>
+<input type="submit" value="Submit" class="btn btn-default"><br>
       
 
 </form>
