--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,12 +14,13 @@
 
 <link href="/css/scrolling-nav.css" rel="stylesheet">
 <link href="/css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="/css/magnific-popup/magnific-popup.css">
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <script src="/js/jquery.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-<!-- <script src="/data/stargardtsQuestions.js" type="text/javascript"></script> -->
+<script src="/js/scripts/popups.js" type="text/javascript"></script> 
 
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/login-modal.js"></script>
@@ -32,6 +33,7 @@
 <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 {{!-- <link rel="stylesheet" href="http://s.mlcdn.co/animate.css"> --}}
 <script src="https://d3js.org/d3.v4.min.js"></script>
+
 
 </head>
 
@@ -71,5 +73,6 @@
     //   responsiveVoice.speak($(this).text()); // Speak the text contents of all nodes within the current 'a' tag
     // });
     </script>
+    <script src="/js/magnific-popup/jquery.magnific-popup.js"></script>
 </body>
 </html>
