--- a/views/resources/clinical_trial_descr.handlebars
+++ b/views/resources/clinical_trial_descr.handlebars
@@ -14,7 +14,7 @@
         <header class="what-is-header">
           <h2 class="what-are-trials-h2">What are Clinical Trials?</h2>
         </header>
-        <p>
+        <p class="lead starg">
         Clinical trials are the final clinical research phase necessary for the Food and Drug Administration (FDA) to approve a treatment for use in humans. The clinical testing of experimental drugs is normally done in three phases, each successive phase involving a larger number of people.
         </p><br><br>
       </section>
@@ -26,7 +26,7 @@
         <header class="what-is-header">
           <h2 class="what-are-trials-h2">PHASE 1</h2>
         </header>
-        <p>
+        <p class="lead starg">
         Phase I studies are primarily concerned with assessing the drug's safety and establishing a maximum tolerated dose for the drug. This initial phase of testing in humans is done in a very small number of volunteers. Sometimes, healthy adults without disease are tested. Other times, patients with end-stage disease are tested. <br><br> 
         For example, in initial phase I trials testing the safety of retinal cell transplantation, patients who were already blind were tested so as not risk the loss of existing vision in patients who still had even very little visual function.
         </p><br><br>
@@ -39,7 +39,7 @@
         <header class="what-is-header">
           <h2 class="what-are-trials-h2">PHASE 2</h2>
         </header>
-        <p>
+        <p class="lead starg">
         Phase II studies are initiated once a drug is found to be safe. In a Phase II study, the effectiveness of a given drug or treatment is evaluated. The duration of a phase II study depends greatly on the nature of the treatment being tested and the specific disease. <br><br> 
         Phase II studies can involve large numbers of patients with several medical centers around the country participating in the trial.
         </p><br><br>
@@ -52,9 +52,22 @@
         <header class="what-is-header">
           <h2 class="what-are-trials-h2">PHASE 3</h2>
         </header>
-        <p>
+        <p class="lead starg">
         Phase III studies allow investigators to better gauge the effectiveness and side effects of a drug in a large population of diverse patients. The large-scale testing provides the pharmaceutical company and the FDA with a more thorough understanding of the drug's effectiveness, benefits, and range of possible adverse reactions.<br><br> 
         In addition, Phase III studies are useful in comparing the new treatment against existing standard treatments.
+        </p><br><br>
+      </section>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <section class="intro-clinics" class="">
+        <header class="what-is-header">
+          <h2 class="what-are-trials-h2">PHASE 4</h2>
+        </header>
+        <p class="lead starg">
+        Studies are done after the drug or treatment has been marketed to gather information on the drug's effect in various populations and any side effects associated with long-term use.<br><br> 
+        
         </p><br><br>
       </section>
     </div>
