--- a/views/resources/whats_stargardts.handlebars
+++ b/views/resources/whats_stargardts.handlebars
@@ -16,45 +16,48 @@
 <div>
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
-      <section id="intro" class="intro-section">
+    <div class="col-lg-9">
+      <section class="intro-section">
         <header class="what-is-header">
-          <h2 class="what-is-h2">What is Stargardt Disease?</h2>
+          <h2 class="what-is-h2-stargardt">What is Stargardt Disease?</h2>
         </header>
-          <p class="lead">
+          <p class="lead starg">
             Stargardt disease is the most common form of inherited juvenile macular degeneration. The progressive vision loss associated with Stargardt disease is caused by the death of photoreceptor cells in the central portion of the retina called the macula.
             The retina is the delicate light-sensing tissue lining the back inside wall of the eye. 
           </p><br>
-          <p class="lead">
+          <p class="lead starg">
             Photoreceptor cells in the retina provide vision by conveying information from the visual field to the brain. The macula is responsible for sharp central vision — for tasks like reading, watching television, and looking at faces.
             Decreased central vision is a hallmark of Stargardt disease. Side vision is usually preserved. Stargardt disease typically develops during childhood and adolescence. Also involved in Stargardt disease is a region beneath the macula called the retinal pigment epithelium.
           </p> <br>
-          <p class="what-is-sci"><strong>Register to find a trial right for you. It's completely free!</strong></p>
-            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn">Register Now</a>
+          
       </section>
     </div>
+
   </div>
   <div class="row">
-    <div class="col-lg-12">
-      <section id="intro" class="intro-section">
+    <div class="col-lg-9">
+      <section class="intro-section">
         <header class="what-is-header">
-          <h2 class="what-is-h2">What are the symptoms?</h2>
+          <h2 class="what-is-h2-stargardt">What are the symptoms?</h2>
         </header>
-        <p class="lead">
+        <p class="lead starg">
         The symptom that brings most people to an eye doctor is a change in central vision. A doctor looking at the retina of a person with Stargardt disease will see characteristic yellowish flecks in and under the macula. The flecks might extend outward in a ring-like fashion. <br> <br>
         The flecks are deposits of lipofuscin, a fatty byproduct of normal cell activity. In Stargardt disease, lipofuscin accumulates abnormally.
         A decrease in color perception also occurs in Stargardt disease. This is because photoreceptor cells involved in color perception are concentrated in the macula.
         </p><br><br>
       </section>
     </div>
+    <div class="col-lg-3">
+      <img src="http://www.geneticsupportfoundation.org/wp-content/uploads/2014/12/autosomal_recessive_inheritance_pattern.jpg" class="img-genetics" width="306" height="236">
+    </div>
   </div>
     <div class="row">
-      <div class="col-lg-12">
-          <section id="intro" class="">
+      <div class="col-lg-9">
+          <section class="">
             <header class="what-is-header">
-              <h2 class="what-is-h2">How quickly does vision fade?</h2>
+              <h2 class="what-is-h2-stargardt">How quickly does vision fade?</h2>
             </header>
-              <p class="lead">
+              <p class="lead starg">
               The progression of symptoms in Stargardt disease is variable. Visual acuity (the ability to distinguish details and shape) may decrease slowly at first, accelerate, and then level off.
               A study of 95 people with Stargardt disease showed that once a visual acuity of 20/40 is reached, there is often rapid progression of additional vision loss until it reaches 20/200. (Normal vision is 20/20. A person with 20/40 vision sees at 20 feet what someone with normal vision sees at 40 feet.) <br> <br>
 
@@ -66,14 +69,17 @@
                 <br>
           </section>
       </div>
+      <div class="col-lg-3">
+        <img src="http://www.geneticsupportfoundation.org/wp-content/uploads/2014/12/autosomal_dominant_inheritance_pattern.jpg" class="img-genetics" width="306" height="236">
+      </div>
     </div>
     <div class="row">
-      <div class="col-lg-12">
-          <section id="intro" class="">
+      <div class="col-lg-9">
+          <section class="">
             <header class="what-is-header">
-              <h2 class="what-is-h2">Is it an inherited disease?</h2>
+              <h2 class="what-is-h2-stargardt">Is it an inherited disease?</h2>
             </header>
-              <p class="lead">
+              <p class="lead starg">
               Stargardt disease is almost always inherited as an autosomal recessive trait. It is inherited when both parents, called carriers, have one gene for the disease paired with one normal gene. Each child has a 25 percent chance of inheriting the two copies of the Stargardt gene (one from each parent) needed to cause the disease. Carrier parents are unaffected because they have only one copy of the gene. <br> <br>
 
               In 1997, Foundation-funded researchers found the gene for Stargardt disease, ABCA4, which normally causes the production of a protein involved in the visual cycle. Lipofuscin buildup appears to be related to a mutation in this gene, and the resulting production of a dysfunctional protein.
@@ -84,12 +90,12 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12">
-          <section id="intro" class="">
+      <div class="col-lg-9">
+          <section class="">
             <header class="what-is-header">
-              <h2 class="what-is-h2">What treatment is available?</h2>
+              <h2 class="what-is-h2-stargardt">What treatment is available?</h2>
             </header>
-              <p class="lead">
+              <p class="lead starg">
               While there are currently no treatments for Stargardt disease, the Foundation is supporting several promising avenues of research, including gene, stem cell and drug therapies.
               For the latest research advances for Stargardt disease treatments, refer to the Foundation publication Stargardt Disease: Research Advances.
               UV blocking sunglasses are generally recommended for outdoors. For people who already have significant vision loss, low vision aides are available.<br><br>
@@ -98,42 +104,44 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12">
-          <section id="intro" class="">
+      <div class="col-lg-9">
+          <section class="">
             <header class="what-is-header">
-              <h2 class="what-is-h2">Are there any related diseases?</h2>
+              <h2 class="what-is-h2-stargardt">Are there any related diseases?</h2>
             </header>
-              <p class="lead">
+              <p class="lead starg">
               Stargardt disease is also known as Stargardt macular dystrophy or fundus flavimaculatus. In addition to recessive Stargardt disease, there are other rarer forms inherited as dominant rather than recessive traits.<br><br>
               </p><br><br>
           </section>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-lg-9">
           <section id="intro-stargardts-defined" class="">
             <header class="what-is-header">
-              <h2 class="what-is-h2">Stargardt Disease Defined</h2>
+              <h2 class="what-is-h2-stargardt">Stargardt Disease Defined</h2>
             </header>
-              <p class="lead">
-In rare cases - One in 20,000--macular degeneration is diagnosed in children and teenagers. Of those cases, the most common cause is Stargardt disease, named for Karl Stargardt, a German ophthalmologist who first reported a case in his practice in 1901. </p><br><br>
+              <p class="lead starg">
+                In rare cases - One in 20,000--macular degeneration is diagnosed in children and teenagers. Of those cases, the most common cause is Stargardt disease, named for Karl Stargardt, a German ophthalmologist who first reported a case in his practice in 1901. </p><br><br>
 
-<p class="lead">
-Sometimes called Stargardt’s disease, Stargardt affects both eyes and develops sometime between the ages of six and twenty, when kids notice difficulties in reading or adapting to bright light. The cause and treatments of the disease in young people are different from those of Age-related Macular Degeneration. Stargardt disease is the result of a gene called ABCA4 and is usually a recessive trait. When both parents carry the ABCA4 mutation, there is a 25 percent chance their children will have Stargardt disease.
-</p><br><br>
-<p class="lead">
-ABCA4 is essentially a piece of genetic coding which tells the body to produce a protein which blocks normal transportation of food and waste to the retina's photoreceptor cells. Flecks of lipofuscin – waste deposits – build up in the retinal pigment epithelium (RPE), which is the nutritional support layer for the rods and cones of the retina. The RPE and the rods and cones break down in the presence of these waste deposits.
-</p><br><br>
+                <p class="lead starg">
+                Sometimes called Stargardt’s disease, Stargardt affects both eyes and develops sometime between the ages of six and twenty, when kids notice difficulties in reading or adapting to bright light. The cause and treatments of the disease in young people are different from those of Age-related Macular Degeneration. Stargardt disease is the result of a gene called ABCA4 and is usually a recessive trait. When both parents carry the ABCA4 mutation, there is a 25 percent chance their children will have Stargardt disease.
+                </p><br><br>
+                <p class="lead starg">
+                ABCA4 is essentially a piece of genetic coding which tells the body to produce a protein which blocks normal transportation of food and waste to the retina's photoreceptor cells. Flecks of lipofuscin – waste deposits – build up in the retinal pigment epithelium (RPE), which is the nutritional support layer for the rods and cones of the retina. The RPE and the rods and cones break down in the presence of these waste deposits.
+                </p><br><br>
 
-<p class="lead">
-A rarer disease called autosomal dominant Stargardt-like macular dystrophy, similar to Stargardt, is caused by the gene ELOVL4.
+                <p class="lead starg">
+                A rarer disease called autosomal dominant Stargardt-like macular dystrophy, similar to Stargardt, is caused by the gene ELOVL4.
 
-Stargardt disease, like other forms of macular degeneration, does not have a cure yet. It is sometimes treated with intraocular injections of anti-VEGF drugs, similar to "wet" Age-related Macular Degeneration treatments, if there is the proliferation or leakage of blood vessels. Nutrition and eye protection (especially sunglasses which block UV A and B and blue light) may delay the progression of this disease. When vision begins to change – whether that is in the teen years or the twenties – vision aids become essential, maximizing the use of peripheral vision.
-</p><br><br>
-Note that excessive amounts of Vitamin A – which is usually considered a good nutrient for the eyes – can actually be toxic to the eyes in people with Stargardt disease because the vitamin is not metabolized by cells in the eye. Check with a health practitioner about nutrition.<br><br>
-              </p><br><br>
-              <p class="what-is-sci"><strong>Register to find a trial!</strong></p>
-                <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn">GET STARTED</a>
+                Stargardt disease, like other forms of macular degeneration, does not have a cure yet. It is sometimes treated with intraocular injections of anti-VEGF drugs, similar to "wet" Age-related Macular Degeneration treatments, if there is the proliferation or leakage of blood vessels. Nutrition and eye protection (especially sunglasses which block UV A and B and blue light) may delay the progression of this disease. When vision begins to change – whether that is in the teen years or the twenties – vision aids become essential, maximizing the use of peripheral vision.
+                </p><br><br>
+                Note that excessive amounts of Vitamin A – which is usually considered a good nutrient for the eyes – can actually be toxic to the eyes in people with Stargardt disease because the vitamin is not metabolized by cells in the eye. Check with a health practitioner about nutrition.<br><br>
+                              </p><br><br>
+              
+             <p class="what-is-sci"><strong>Register to find a trial right for you. It's completely free!</strong></p>
+               <a href="/users/sign-in" type="submit" class="btn btn-primary" id="get-started-btn">Register Now</a>
+            
           </section>
       </div>
     </div>
