--- a/views/users/password_reset.handlebars
+++ b/views/users/password_reset.handlebars
@@ -7,21 +7,21 @@
     <div class="alert alert-success" style="margin-top: 100px">{{success}}</div>
     {{/if}}
     
-    <form id="sign-in-form" class="form-horizontal" action="/accounts/password-update" method="POST">
+    <form id="sign-in-form" class="form-horizontal" action="/reset" method="POST">
     
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">New Password</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPass" name="password" placeholder="Password">
+          <input type="password" class="form-control" id="inputPass" name="password" placeholder="New Password">
         </div>
       </div>
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Confirm Password</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPass" name="confirm" placeholder="Password">
+          <input type="password" class="form-control" id="inputPass" name="confirm" placeholder="Confirm Password">
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit!</button> 
+      <button type="submit" class="btn btn-default">Update Password</button> 
 
     </form>
 
