styled homepage and made animations

--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -2,7 +2,7 @@
 <div class="jumbotron-aboutus">
     <span>
         
-        <h1 class="main-h1"> Helping those with <strong id="eye-diseases">Retinal Disease</strong> <br>find life changing treatments 
+        <h1 class="aboutus-h1"> Helping those with <strong id="eye-diseases">Retinal Disease</strong> <br>find life changing treatments 
         <p class="what-is-sci"><strong></strong></p>
             <a href="/contact_us/contact" type="submit" class="btn btn-primary" id="main-btn">Contact</a>
         </h1> 
