--- a/views/contactus/contact_us.handlebars
+++ b/views/contactus/contact_us.handlebars
@@ -8,6 +8,6 @@
       <label for="comments">Comments:</label><br />
       <textarea rows="4" cols="40" id="comments" name="content" placeholder="Your Message..."></textarea>
     </p>
-    <label><input type="checkbox" name="subscribe" checked="checked" /> Sign me up for email updates</label><br />
+    {{!-- <label><input type="checkbox" name="subscribe" checked="checked" /> Sign me up for email updates</label><br /> --}}
     <input type="submit" id="main-btn" value="Submit" />
 </form>
