--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,20 +27,16 @@ h3 {
     font-weight: 500;
     line-height: 15.4px;
 }
-/*p {
-    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    line-height: 20px;
-}*/
+#bs-example-navbar-collapse-1 {
+    position: relative;
+    top: 1.333333em;
+}
 .parallax {
     /* The image used */
-    background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");
+    background-image: url("http://wallpapercave.com/wp/wZR4Saq.jpg");
 
     /* Set a specific height */
-    height: 75%;
+    height: 100%;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -50,10 +46,10 @@ h3 {
 }
 .parallax-2 {
     /* The image used */
-    background-image: url("http://www.stemcentrx.com/img/home_clinical_trials.jpg");
+    background-image: url("https://static.pexels.com/photos/30763/pexels-photo-30763-large.jpg");
 
     /* Set a specific height */
-    height: 75%;
+    height: 100%;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -66,7 +62,7 @@ h3 {
     background-image: url("http://www.stemcentrx.com/img/home_science.png");
 
     /* Set a specific height */
-    height: 75%;
+    height: 100%;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -77,21 +73,7 @@ h3 {
 .parallax-4 {
     /* The image used */ 
 
-    background-image: url("https://static.pexels.com/photos/30763/pexels-photo-30763-large.jpg");
-
-    /* Set a specific height */
-    height: 60%;
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.parallax-5 {
-    /* The image used */ 
-
-    background-image: url("http://www.hdwallpaperspulse.com/wp-content/uploads/2014/05/07/53353.jpeg");
+    background-image: url("http://feelgrafix.com/data_images/out/28/1008780-doctor.jpg");
 
     /* Set a specific height */
     height: 100%;
@@ -102,7 +84,24 @@ h3 {
     background-repeat: no-repeat;
     background-size: cover;
 }
+.parallax-5 {
+    /* The image used */ 
 
+    background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");
+
+    /* Set a specific height */
+    height: 100%;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.clin-trial-img {
+    width: 150px;
+    height: 150px;
+}
 /*http://www.stemcentrx.com/img/home_science.png*/
 /*http://www.stemcentrx.com/img/clinical-bg.png*/
 #inputEmail {
@@ -157,21 +156,32 @@ ul.shortcuts li {
 /*main navbar text*/
 #cesar-logo, #resources-nav-text, #howitworks-nav-text, #tools-nav-text, #treatments-nav-text, #login-nav-text, #signup-nav-text{
     color: darkslategray;
+    font-size: 20.5px;
 }
 #treatments-nav-text:hover {
     color: deeppink;
+    transition: all 1s ease-out;
+
 }
 #tools-nav-text:hover {
     color: deeppink;
+    transition: all 1s ease-out;
+
 }
 #howitworks-nav-text:hover {
     color: deeppink;
+    transition: all 1s ease-out;
+
 }
 #resources-nav-text:hover {
     color: deeppink;
+    transition: all 1s ease-out;
+
 }
 #signup-nav-text:hover{
     color: deeppink;
+    transition: all 1s ease-out;
+
 }
 
 
@@ -184,6 +194,7 @@ ul.shortcuts li {
     color: deeppink;
     border-radius: 7%;
     opacity: 7px;
+    transition: 1s ease-out;
 }
 #signup-nav-text {
     background-color: transparent;
@@ -349,7 +360,7 @@ pre {
 
     background-image: url("http://www.stemcentrx.com/img/header_our_science.png");
     background-size: cover;
-    height: 60%;
+    height: 90%;
 }
 .jumbotron-my-genetics {
 
@@ -362,18 +373,18 @@ pre {
 
     background-image: url("http://www.stemcentrx.com/img/clinical-bg.png");
     background-size: cover;
-    height: 60%;
+    height: 90%;
 }
 .jumbotron-whatis {
 
     background-image: url("https://static.pexels.com/photos/47446/pexels-photo-47446-large.jpeg");
     background-size: cover;
-    height: 60%;
+    height: 90%;
 }
 .jumbotron-clinical-trial {
     background-image: url('https://static.pexels.com/photos/4154/clinic-doctor-health-hospital-large.jpg');
     background-size: cover;
-    height: 60%;
+    height: 90%;
 }  
 .jumbotron-gene-data {
     background-image: url('https://static.pexels.com/photos/4154/clinic-doctor-health-hospital-large.jpg');
@@ -383,7 +394,7 @@ pre {
 .jumbotron-aboutus {
     background-image: url('http://www.stemcentrx.com/img/hdr_company.jpg');
     background-size: cover;
-    height: 60%;
+    height: 90%;
 }
 #results-h1 {
     margin-top: 200px;
@@ -409,16 +420,30 @@ pre {
     text-transform: uppercase;
 }
 .main-h1 {
-    padding-top: 215px;
     font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 65px;
+    font-size: 75px;
     text-align: center;
     line-height: 1.3;
     color: white;
     width: 100%;
     font-weight: bold;
-    margin-top: 0;
+    position: relative;
+    display: block;
+    top: 50%;
+    opacity: 0;
      
+}
+.aboutus-h1 {
+    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 75px;
+    text-align: center;
+    line-height: 1.3;
+    color: white;
+    width: 100%;
+    font-weight: bold;
+    position: relative;
+    display: block;
+    opacity: 1;
 }
 #genetic-ring {
     height: 500px;
@@ -490,6 +515,7 @@ pre {
     margin: 10px;
     text-transform: uppercase;
     text-align: center;
+    width: 100%;
 }
 .what-are-trials-h2 {
 
@@ -500,10 +526,22 @@ pre {
 }
 .what-is-h2 {
 
-    font-size: 60px;
+    font-size: 70px;
     font-weight: 600;
     color: darkslategray;
-    margin-bottom: 69px;
+    top: 16%;
+    display: block;
+    position: relative;
+    opacity: 0;
+    
+
+    /*margin-bottom: 69px;*/
+
+}
+.index-page {
+    margin-top: 60px;
+    font-size: 26px;
+    font-weight: 600;
 
 }
 .what-is-h2-stargardt {
@@ -521,10 +559,13 @@ margin-bottom: 69px;
 }
 .how-it-works-h2-top {
 
-font-size: 60px;
-font-weight: 600;
-color: darkslategray;
-margin-bottom: 69px;
+    font-size: 70px;
+    font-weight: 600;
+    color: darkslategray;
+    top: 20%;
+    display: block;
+    position: relative;
+    opacity: 0;
 }
 .tools-h2 {
 
@@ -535,10 +576,10 @@ color: white;
 /*margin-top: 100px;*/
 /*background-color: white;*/
 background: rgba(255, 255, 255, 0.9);
-opacity: .8;
+opacity: 1.3;
 z-index: 7;
 /*position: fixed;*/
-width: 100%;
+width: 50%;
 height: 100%;
 /*margin: 0;*/
 box-sizing: border-box;
@@ -548,15 +589,16 @@ color: #433F4E;
 text-align: center;
 }
 .page-trials {
-    /*width: 50%;
-    height: 100%;*/
+    /*width: 50%;*/
+    height: 100%;
 }
+
 
 .pages-tools {
     height: 100%;
 }
 .page-whatis {
-    /*width: 50%;*/
+    width: 50%;
     height: 100%;
 }
 .space-taker {
@@ -667,6 +709,17 @@ text-align: center;
 }
 .avail-trials-h2 {
     font-size: 32px;
+    margin-top: 50px;
+}
+.avail-trials-h2:hover {
+    font-size: 38px;
+    color: deeppink;
+    transition: 1s ease-out;
+    cursor: pointer;
+}
+.avail-trials-h1 {
+    font-size: 50px;
+    padding-bottom: 20px;
 }
 
 .what-is-header {
@@ -675,7 +728,7 @@ text-align: center;
     /*margin-top: 100px;*/
     /*background-color: whitesmoke;*/
     background: rgba(255, 255, 255, 0.9);
-    opacity: .8;
+    opacity: 1.3;
     z-index: 7;
     /*border-radius: 50%; */
     /*position: fixed;*/
@@ -688,12 +741,13 @@ text-align: center;
     color: #433F4E;
     text-align: center;
 }
+
 .avail-header {
     
     background: rgba(255, 255, 255, 0.9);
-    opacity: .8;
+    opacity: 1.3;
     z-index: 7;
-    width: 100%;
+    width: 50%;
     height: 100%;
     box-sizing: border-box;
     z-index: 100;
@@ -703,7 +757,7 @@ text-align: center;
 .how-it-header {
     
     background: rgba(255, 255, 255, 0.9);
-    opacity: .7;
+    opacity: 1.3;
     z-index: 7;
     width: 100%;
     height: 100%;
@@ -980,9 +1034,13 @@ text-align: center;
     background-color:  white;
 }
 #learn-more {
-    background-color:  whitesmoke;
-    color: deeppink;
-    border-color: transparent;
+   font-size: 22px;
+   /*padding: 38px;*/
+   position: relative;
+   color: white;
+   background-color: deeppink;
+   border-color: deeppink;
+   transition: all 0.3s ease-out;
 }
 .starg {
     line-height: 1.7;
@@ -1003,6 +1061,7 @@ text-align: center;
         margin: 2em 0 0;
 
 }
+
 .modal-lg {
     height: 100%;
     width: 100%;
@@ -1023,7 +1082,11 @@ text-align: center;
 }
 #learn-more:hover {
     background-color:  transparent;
-    color: darkslategray;
+    color: deeppink;
+    transition: 1s ease-out;
+    border-color: deeppink;
+    border-width: 5px;
+    border-style: solid;
 }
 .new-window {
     height: 130px;
@@ -1039,6 +1102,40 @@ text-align: center;
     background-color: deeppink;
     border-color: deeppink;
     transition: all 0.3s ease-out;
+}
+#scroll-to-1 {
+    font-size: 22px;
+    /*padding: 38px;*/
+    position: relative;
+    margin-top: 80px;
+    color: white;
+    background-color: transparent;
+    border-color: deeppink;
+    transition: all 0.3s ease-out;
+    cursor: pointer;
+    display: block;
+    top: 99%;
+}
+
+.glyphicon-chevron-down {
+    /*height: 140px;*/
+    /*width: 60px;*/
+    color: deeppink;
+    border-style: solid;
+    border-color: white;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.glyphicon-chevron-down:hover {
+    /*height: 140px;*/
+    /*width: 60px;*/
+    color: deeppink;
+    border-style: solid;
+    border-color: deeppink;
+    border-radius: 50%;
+    padding: 10px;
+    transition: 1s ease-out;
 }
 #get-started-btn {
     /* width: 400px;
@@ -1144,22 +1241,9 @@ text-align: center;
 
 #how-it-works {
     padding: 20px 0 20px 0;
-    background-color:   mediumaquamarine;
-    /*background-image: url('http://feelgrafix.com/data_images/out/20/930465-dna.jpg');
-    background-size: cover;
-    margin-left: 15px;
-    margin-right: 15px;
-    /*-webkit-box-reflect: below 0px -webkit-gradient(linear, left top, right bottom, from(transparent), color-stop(20%, transparent), to(rgba(255, 255, 255, 0.5)));*/
-    
+    background-color:   mediumaquamarine;  
 }
-/*#how-it-works:hover {
-    padding: 20px 0 20px 0;
-    background-color:   white;
-    background-image: url('http://feelgrafix.com/data_images/out/20/930465-dna.jpg');
-    background-size: cover;
-    /*-webkit-box-reflect: below 0px -webkit-gradient(linear, left top, right bottom, from(transparent), color-stop(20%, transparent), to(rgba(255, 255, 255, 0.5)));*/
-    
-/*}*/
+
 #dod-how-it-works_left {
     position: relative;
     z-index: 8;
@@ -1492,6 +1576,7 @@ div.container-fluid.bg-info {
 nav.navbar.navbar-default.navbar-fixed-top {
     background-color: white;
     border-color: transparent;
+    height: 6.9375em;
     
 }
 
