--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,196 +4,130 @@
          <div class="page-fill">
 
          </div>
-           <div class="page-whatis">
-             {{!-- <header class="what-is-header"> --}}
-                <h1 class="main-h1"> A new approach <br>to finding clinical trials. 
-                    {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a> --}}
+           
+                <h1 class="main-h1"> A new approach to <br>finding retinal disease treatment. 
+                    <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
                 </h1> 
-             {{!-- </header> --}}
+             
                 
            </div>
          
 </section>
-<div style="background-color: transparent; opacity: 1; width: 100%; height: 5%">
-    <div class="col-md-12" style="text-align: center; opacity: 1">
-    {{!-- <br> --}}
-   {{!--  <img src="http://www.med.unc.edu/psych/images/pubmed.png/@@images/b85fdbbf-a467-4280-8441-4b13c8c9f82d.png" style="height: 80px; width: 150px; padding-top: 20px; margin-left: 30px margin-top: 30px"> 
-
-    <img src="http://aboutclinicaltrialsgov.lillycoi.com/img/NLM.svg" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px; margin-top: 20px">    
-
-    <img src="https://clinicaltrials.gov/apple-touch-icon-144x144.png" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px;  margin-top: 20px"> 
-
-    <img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/23andMe_logo.svg/2000px-23andMe_logo.svg.png" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px;  margin-top: 20px"> --}}
-
-    </div>
-
-{{!-- 
-    <div class="col-md-4" style="text-align: center; opacity: 1">
-    <img src="http://aboutclinicaltrialsgov.lillycoi.com/img/NLM.svg" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px; margin-top: 20px">     
-    <br>
-        
-    </div>
-    <div class="col-md-4" style="text-align: center; opacity: 1">
-    <img src="https://clinicaltrials.gov/apple-touch-icon-144x144.png" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px;  margin-top: 20px"> 
-    <br>
-        
-    </div> --}}
-    
-    
-    
-</div><br><br><br>
+<div id="part-1"></div>
  
-                <section id="cta" class="parallax">
-                       <div class="overlay"></div>
-                       {{!-- <div class="container"> --}}
-                         
-                         <div class="page-fill">
+<section id="cta" class="parallax">
+   <div class="overlay"></div>
+   {{!-- <div class="container"> --}}
+     
+     <div class="page-fill">
 
-                         </div>
-                           <div class="page-whatis">
-                             <header class="what-is-header">
+     </div>
+       <div class="page-whatis">
+         <header class="what-is-header">
 
-                             <h2 class="what-is-h2">What is Cesarcells.com?</h2>
-                                 <p class="lead">
-                                 Cesarcells.com helps you find cutting edge clinical trials. 
+         <h2 class="what-is-h2">What is Cesarcells.com?
 
-                                 It is an independent resource on Stargardts disease as well as other Age Related Macular Degeneration (ARMD) eye diseases. 
+             <p class="lead index-page">
+             Cesarcells.com helps you find cutting edge clinical trials. 
 
-                                 We are not affiliated in any way with any medical company and we have a team of health professionals analyzing the full body of research.
-                                 </p> <br>
+             It is an independent resource on Stargardts disease as well as other Age Related Macular Degeneration (ARMD) eye diseases. 
 
-                                 <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
-                                 
-                                 <a class="btn btn-primary btn-lg" href="/about_us/aboutus" role="button" id="learn-more">Learn More About Us</a>
-                             </header>
-                                
-                           </div>
-                         <!-- /.row-->
-                       {{!-- </div> <!-- /.container--> --}}
-                     </section>
-                    <div class="row" style="background-color: white; opacity: 1">
-                        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
-                        <br>
-                        
-                        </div>
-                        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
-                        <br>
-                           
-                        </div>
-                        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
-                        <br>
-                          
-                        </div>
-                        
-           <img src="assets/images/mac-cesar.png" style=" padding-top: 20px; margin-left: 30px;  margin-top: 20px"> 
-           <img src="https://www.genetrainer.com/static/img/front/v2/content-genetrainer/23andMe_Box_Genetrainer.jpg">            
-                        
-                    </div><br><br><br>
-    <A name="how-it-work-main"></A>
+             We are not affiliated in any way with any medical company and we have a team of health professionals analyzing the full body of research.
+             </p> <br>
 
-    <section id="cta" class="parallax-2">
-        <div class="overlay"></div>
-            <div class="page-whatis">
+             <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
+             
+             <a class="btn btn-primary btn-lg" href="/about_us/aboutus" role="button" id="learn-more">Learn More About Us</a>
+         </h2>
+         </header>
+       </div>
+ </section>
+             
+<A name="how-it-work-main"></A>
 
-                        <header class="how-it-header">
-                            <h2 class="how-it-works-h2-top">How It Works</h2>
+<section id="cta" class="parallax-2">
+    <div class="overlay"></div>
+        <div class="page-whatis">
 
-                                <p class="lead">
-                 
+            <header class="how-it-header">
+                <h2 class="how-it-works-h2-top">How It Works
 
-                                Take a 5 minute assessment to see if you qualify for clinical trials. Then contact the clinics you qualified for. 
 
-                                </p> 
-                                
-                                <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more">Learn More About Us</a>
-            
-                       
-                        </header>
+                <p class="lead index-page">
+ 
 
-                    
-            </div>
-        <div class="space-taker"></div>
+                Take a 5 minute assessment to see if you qualify for clinical trials. Then contact the clinics you qualified for. 
 
-    </section>
-    {{!-- <div class="row" style="background-color: white; opacity: 1">
-        <div class="col-md-12" style="text-align: center; opacity: 1; height: 50%">
-        <h2 >Easy access to cutting edge medical studies and information<h2>
-        <br> --}}
-        
-        {{!-- </div>
-        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
-        <br>
+                </p> 
+                
+                <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more">Learn More About Us</a>
+
+                </h2>
            
+            </header>
+       
         </div>
-        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
-        <br>
-          
-        </div> --}}
-        
-        
-        
-    {{!-- </div><br><br><br> --}}
 
-
-
+</section>
+    
+   <A name="tools-main"></A>
 <section id="cta" class="parallax-3">
      
 
-           <A name="tools-main"></A>
-           <div class="pages-tools">
-               <header class="tools-h2"> 
-               <h2 class="how-it-works-h2-top">TOOLS </h2>
-                    <p class="lead">
+   <div class="pages-tools">
+       <header class="tools-h2"> 
+       <h2 class="how-it-works-h2-top">TOOLS 
+            <p class="lead index-page">
+            
+
+            Our tools make it easier for you to find life changing treatments. No more hard to read studies. Just a simple assessment. It's that's easy.
+
+            </p> 
+            <div class="row">
+
+                <div class="col-sm-4">
                     
+                    <h2 class="main-tools-title" > <span class="glyphicon glyphicon-eye-open icon-test" aria-hidden="true"></span><br>       Amsler Test<br></h2>
 
-                    Our tools make it easier for you to find life changing treatments. No more hard to read studies. Just a simple assessment. It's that's easy.
+                </div>
+                <div class="col-sm-4">
 
-                    </p> 
-                    <div class="row">
+                    <h2 class="main-tools-title" > <span class="glyphicon glyphicon-book icon-book" aria-hidden="true"></span><br>        Glossary<br></h2>
+                
+                </div>
+                
 
-                        <div class="col-sm-2">
-                            
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-eye-open icon-test" aria-hidden="true"></span><br>       Amsler Test<br></h2>
+                <div class="col-sm-4">
 
-                        </div>
-                        <div class="col-sm-2">
+                    <h2 class="main-tools-title" > <span class="glyphicon glyphicon-check icon-check" aria-hidden="true"></span><br>        Clinical Trial Qualifier</h2>
+                
+                </div> 
+            </div>
+            <div class="row">
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-book icon-book" aria-hidden="true"></span><br>        Glossary<br></h2>
-                        
-                        </div>
-                        
+                <div class="col-sm-4">
 
-                        <div class="col-sm-2">
+                    <h2 class="main-tools-title" > <span class="glyphicon glyphicon-comment icon-comment" aria-hidden="true"></span><br>   Discussion Forum</h2>
+                
+                </div>
+                <div class="col-sm-4">
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-check icon-check" aria-hidden="true"></span><br>        Clinical Trial Qualifier</h2>
-                        
-                        </div> 
-                        <div class="col-sm-2">
+                    <h2 class="main-tools-title" > <span class="glyphicon glyphicon-bullhorn icon-bull" aria-hidden="true"></span><br>        Text Reader<br> </h2>
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-comment icon-comment" aria-hidden="true"></span><br>   Discussion Forum</h2>
-                        
-                        </div>
-                        <div class="col-sm-2">
+                </div>
+                <div class="col-sm-4">
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-bullhorn icon-bull" aria-hidden="true"></span><br>        Text Reader<br> </h2>
+                    <h2 class="main-tools-title" > <span class="glyphicon glyphicon-calendar icon-calendar" aria-hidden="true"></span><br>        Appointments<br> </h2>
 
-                        </div>
-                        <div class="col-sm-2">
+                </div>
 
-                            <h2 class="main-tools-title" > <span class="glyphicon glyphicon-calendar icon-calendar" aria-hidden="true"></span><br>        Appointments<br> </h2>
-
-                        </div>
-
-
-                   
-
-                    </div>
-
-                 </header>
             </div>
 
-             
-     </section>
+            </h2>
+        </header>
+    </div>
+           
+</section>
     
 <!-- Treatments Section -->
 <A name="treatments-main"></A>
@@ -201,38 +135,45 @@
   <div class="col-lg-12"> --}}
   <section id="cta" class="parallax-4">
          
-             <div class="page-trials">
+            {{!--  <div class="block-page-trials">
+              <header class="block-avail-header">
+                     
+             </header> --}}
                  <header class="avail-header">
-                        <h2 class="how-it-works-h2-top">Clinical Trials</h2>
-                         
+                        <h2 class="how-it-works-h2-top">Clinical Trials
+
                         <div class="row">
-                             <div class="col-md-3">
+                             <div class="col-md-6">
                              <h2 class="avail-trials-h2">STEMCELL</h2>
-                             <img src="https://www.osc-ortho.com/wp-content/uploads/2016/02/stem-cells-icon.png">
+                             <img class="clin-trial-img" src="https://www.osc-ortho.com/wp-content/uploads/2016/02/stem-cells-icon.png">
                              </div>
-                             <div class="col-md-3">
-                             <h2 class="avail-trials-h2">EXPERIMENTAL DRUG</h2>
-                             <img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/simple-red-square-icons-signs/129488-simple-red-square-icon-signs-prescription1.png">
+                             <div class="col-md-6">
+                             <h2 class="avail-trials-h2">DRUG</h2>
+                             <img class="clin-trial-img" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/simple-red-square-icons-signs/129488-simple-red-square-icon-signs-prescription1.png">
                              </div>
-                             <div class="col-md-3">
+                             
+                        </div>
+                        <div class="row">
+                          
+                             <div class="col-md-6">
                              <h2 class="avail-trials-h2">BIO-TECH</h2>
-                             <img src="http://biotechprimer.com/wp-content/uploads/2014/10/Icon-Biotechnology.png" style="height: 250px; width: 250px">
+                             <img class="clin-trial-img" src="http://biotechprimer.com/wp-content/uploads/2014/10/Icon-Biotechnology.png">
                              </div>
-                             <div class="col-md-3">
+                             <div class="col-md-6">
                              <h2 class="avail-trials-h2">GENETIC</h2>
-                             <img src="https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/512/biotech.png" style="height: 250px; width: 250px">
+                             <img class="clin-trial-img" src="https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/512/biotech.png">
                              </div>
                         </div>
-                         
                          {{!-- <p class="what-is-sci"><strong>Register to find a trial right for you. It's completely free!</strong></p> --}}
                          {{!--   <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a> --}}
            
+                        </h2>
                 </header>
             </div>
     </section>
     
     <br><br><br>
-    <div style="background-color: white; width: 100%; height: 2%">
+    <div style="background-color: white; width: 100%; height: 10%; opacity: 1">
         <div style="text-align: center; opacity: 1; height: 10px">
         <h1 class="avail-trials-h1">Get Started Finding Your Treatment Now</h1>
             <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
