--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -2,40 +2,41 @@
 <html lang="en">
 
 <head>
-<title>CesarCells</title>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="">
+    <title>CesarCells</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<link href="/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://use.fontawesome.com/67714d146e.js"></script>
-<link href="/css/scrolling-nav.css" rel="stylesheet">
-<link href="/css/style.css" rel="stylesheet">
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/67714d146e.js"></script>
+    <link href="/css/scrolling-nav.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/magnific-popup/magnific-popup.css">
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
-<script src="/js/jquery.js" type="text/javascript"></script>
-<script src="/js/amsler-tabs.js" type="text/javascript"></script>
+    <script src="/js/jquery.js" type="text/javascript"></script>
+    <script src="/js/amsler-tabs.js" type="text/javascript"></script>
 
-<script src="/js/scripts/snp_table_popups.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-<!-- <script src="/data/stargardtsQuestions.js" type="text/javascript"></script> -->
-<script type="text/javascript"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/login-modal.js"></script>
-<script src="/js/jquery.easing.min.js"></script>
+    <script src="/js/scripts/snp_table_popups.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <!-- <script src="/data/stargardtsQuestions.js" type="text/javascript"></script> -->
+    <script type="text/javascript"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/login-modal.js"></script>
+    <script src="/js/jquery.easing.min.js"></script>
 
-<script src="/js/scrolling-nav.js"></script>
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-<script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
-<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
-<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
-  
-<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
-<script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="/js/scrolling-nav.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+    <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.css">
+      
+    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
 
 {{!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.12.3.js"></script> --}}
@@ -76,6 +77,8 @@
     });
     </script>
     
+    <script src="/js/magnific-popup/jquery.magnific-popup.js"></script>
+    <script src="/js/scripts/popups.js" type="text/javascript"></script> 
 
 </body>
 </html>
