--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,37 +2,37 @@
 <html lang="en">
 
 <head>
-<title>CesarCells</title>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="">
+    <title>CesarCells</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-<link href="/css/scrolling-nav.css" rel="stylesheet">
-<link href="/css/style.css" rel="stylesheet">
-<link rel="stylesheet" href="/css/magnific-popup/magnific-popup.css">
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <link href="/css/scrolling-nav.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/magnific-popup/magnific-popup.css">
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
-<script src="/js/jquery.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-<script src="/js/scripts/popups.js" type="text/javascript"></script> 
+    <script src="/js/jquery.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script src="/js/scripts/popups.js" type="text/javascript"></script> 
 
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/login-modal.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/login-modal.js"></script>
 
-<script src="/js/jquery.easing.min.js"></script>
+    <script src="/js/jquery.easing.min.js"></script>
 
-<script src="/js/scrolling-nav.js"></script>
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-<script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
-<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
-{{!-- <link rel="stylesheet" href="http://s.mlcdn.co/animate.css"> --}}
-<script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="/js/scrolling-nav.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+    <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    {{!-- <link rel="stylesheet" href="http://s.mlcdn.co/animate.css"> --}}
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
 
 </head>
@@ -74,5 +74,6 @@
     // });
     </script>
     <script src="/js/magnific-popup/jquery.magnific-popup.js"></script>
+    <script src="/js/scripts/fadeIn.js"></script>
 </body>
 </html>
