--- a/views/account/updateinfo.handlebars
+++ b/views/account/updateinfo.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-6">
   <div class="wrap-updateinfo">
-      <h2 id="header-details-form">CONTACT INFORMATION</h2>
+      <h2 id="header-details-form">UPDATE INFORMATION</h2>
 
 
       <form class="form-updateinfo" action="/accounts/update-info" method="post" autocomplete="on">
@@ -9,7 +9,7 @@
   
     <div class="form-group">
       <label for="FirstName">First Name</label>
-      <input type="text" name="fname" placeholder="First name" class="form-control" > 
+      <input type="text" name="fname" placeholder="First name" class="form-control" autofocus> 
     </div>
 
     <div class="form-group">
@@ -95,7 +95,7 @@
     
     <div class="form-group">
       <label for="zip">Zip: </label>
-      <input type="number" id="zip" name="zipcode" class="form-control" placeholder="Enter Age" autofocus>
+      <input type="number" id="zip" name="zipcode" class="form-control" placeholder="Enter Age">
     </div>      
 
     Enter your Birthday<br>
