--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,9 +10,13 @@
                 </h1> 
              
                 
-           </div>
+        </div>
+
+
          
+        
 </section>
+
 <div id="part-1"></div>
  
 <section id="cta" class="parallax">
@@ -117,7 +121,7 @@
                 </div>
                 <div class="col-sm-4">
 
-                    <h2 class="main-tools-title" > <span class="glyphicon glyphicon-calendar icon-calendar" aria-hidden="true"></span><br>        Appointments<br> </h2>
+                    <h2 class="main-tools-title" > <span class="glyphicon glyphicon-tasks icon-tasks" aria-hidden="true"></span><br>        Genome Analysis<br> </h2>
 
                 </div>
 
