--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,6 +33,8 @@
     <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
     {{!-- <link rel="stylesheet" href="http://s.mlcdn.co/animate.css"> --}}
     <script src="https://d3js.org/d3.v4.min.js"></script>
+  
+    <script type="text/javascript" src="/js/scripts/textreader_popup.js"></script>
 
 
 </head>
