--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -59,7 +59,7 @@
             </a>
 
             <a href="/tools/all-trials">
-            <img src="https://images-na.ssl-images-amazon.com/images/I/31K9TPCCM8L.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash4"/>
+            <img src="https://images-na.ssl-images-amazon.com/images/I/31K9TPCCM8L.jpg" class="img-rounded hvr-wobble-vertical" alt="Cinque Terre" width="304" height="206" id="img-dash4"/>
             <h3 id="top-right-h3"><spanid="top-right-span">Search For Trials</span></h3>
             </a>
         </div>
