--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -1,6 +1,6 @@
 
 <div class="jumbotron-aboutus">
-    <span>
+    <div class="wrap-aboutus-h1">
         
         <h1 class="aboutus-h1"> Helping those with <strong id="eye-diseases">Retinal Disease</strong> <br>find life changing treatments 
         <p class="what-is-sci"><strong></strong></p>
@@ -8,7 +8,7 @@
         </h1> 
         
         
-    </span>
+    </div>
 </div>
 
 <div class="row">
