--- a/views/account/password.handlebars
+++ b/views/account/password.handlebars
@@ -1,12 +1,16 @@
 <div class="row">
   <div class="col-md-6">
   {{#if error}}
-  <div class="alert alert-danger" style="margin-top: 100px">{{error}}</div>
+  <div class="alert alert-danger" style="margin-top: 180px">{{error}}</div>
   {{/if}}
   {{#if success}}
-  <div class="alert alert-success" style="margin-top: 100px">{{success}}</div>
+  <div class="alert alert-success" style="margin-top: 180px">{{success}}</div>
   {{/if}}
-  <form id="sign-in-form" class="form-horizontal" action="/accounts/password-update" method="POST">
+  
+  <div class="wrap-update-pass-form">
+  <h2>Update Password</h2>
+
+  <form id="update-pass-form" class="form-horizontal" action="/accounts/password-update" method="POST">
   
     <div class="form-group">
       <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
@@ -26,10 +30,10 @@
         <input type="password" class="form-control" id="inputPass" name="newpassword" placeholder="Password">
       </div>
     </div>
-    <button type="submit" class="btn btn-default">Submit!</button> 
+    <button type="submit" class="btn btn-default" id="update-pass-btn">UPDATE</button> 
 
   </form>
-
+  </div>
   </div>
   <div class="col-md-6" id="why-register">
 
