--- a/views/users/password_reset.handlebars
+++ b/views/users/password_reset.handlebars
@@ -7,7 +7,7 @@
     <div class="alert alert-success" style="margin-top: 100px">{{success}}</div>
     {{/if}}
     
-    <form id="sign-in-form" class="form-horizontal" action="/reset" method="POST">
+    <form id="sign-in-form" class="form-horizontal" action="/reset/{{token}}?_method=UPDATE" method="POST" style="margin-top: 300px">
     
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">New Password</label>
@@ -15,12 +15,12 @@
           <input type="password" class="form-control" id="inputPass" name="password" placeholder="New Password">
         </div>
       </div>
-      <div class="form-group">
+      {{!-- <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Confirm Password</label>
         <div class="col-sm-10">
           <input type="password" class="form-control" id="inputPass" name="confirm" placeholder="Confirm Password">
         </div>
-      </div>
+      </div> --}}
       <button type="submit" class="btn btn-default">Update Password</button> 
 
     </form>
